--- a/custom_components/versatile_thermostat/translations/en.json
+++ b/custom_components/versatile_thermostat/translations/en.json
@@ -571,8 +571,8 @@
           "heater_heating_time": "Heater warm-up time (min)",
           "heater_cooling_time": "Heater cool-down time (min)",
           "auto_tpi_max_coef_int": "Max Internal Coefficient",
-          "auto_tpi_heating_rate": "Heating rate (°C/h)",
-          "auto_tpi_cooling_rate": "Cooling rate (°C/h)"
+          "auto_tpi_heating_rate": "Heating rate ({°C|°F}/h)",
+          "auto_tpi_cooling_rate": "Cooling rate ({°C|°F}/h)"
         },
         "data_description": {
           "auto_tpi_enable_update_config": "Automatically update the configuration with learned coefficients",
