Remove cooling support in auto tpi

--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -287,8 +287,7 @@
           "heater_heating_time": "Temps de chauffe (min)",
           "heater_cooling_time": "Temps de refroidissement (min)",
           "auto_tpi_max_coef_int": "Coefficient Interne Max",
-          "auto_tpi_heating_rate": "Taux de chauffe ({unit}/h)",
-          "auto_tpi_cooling_rate": "Taux de refroidissement ({unit}/h)"
+          "auto_tpi_heating_rate": "Taux de chauffe ({unit}/h)"
         },
         "data_description": {
           "auto_tpi_enable_update_config": "Mettre à jour automatiquement la configuration avec les coefficients appris",
@@ -633,8 +632,7 @@
           "heater_heating_time": "Temps de chauffe (min)",
           "heater_cooling_time": "Temps de refroidissement (min)",
           "auto_tpi_max_coef_int": "Coefficient Interne Max",
-          "auto_tpi_heating_rate": "Taux de chauffe ({unit}/h)",
-          "auto_tpi_cooling_rate": "Taux de refroidissement ({unit}/h)"
+          "auto_tpi_heating_rate": "Taux de chauffe ({unit}/h)"
         },
         "data_description": {
           "auto_tpi_enable_update_config": "Mettre à jour automatiquement la configuration avec les coefficients appris",
