--- a/custom_components/versatile_thermostat/translations/en.json
+++ b/custom_components/versatile_thermostat/translations/en.json
@@ -855,6 +855,40 @@
         "min_power_threshold": {
           "name": "Minimum Power Threshold",
           "description": "Minimum power percentage to consider a cycle as saturated (default 95%). Lower values will include more cycles but may be less accurate."
+        },
+        "capacity_safety_margin": {
+          "name": "Safety Margin for Capacity",
+          "description": "Margin percentage to subtract from max capacity before saving (default 20%). Valid range 0-90%."
+        }
+      },
+      "response": {
+        "max_capacity": {
+          "name": "Max Capacity",
+          "description": "Max estimated adiabatic capacity (in °C/h)"
+        },
+        "recommended_capacity": {
+          "name": "Recommended Capacity",
+          "description": "Recommended capacity after safety margin (in °C/h)"
+        },
+        "margin_percent": {
+          "name": "Safety Margin",
+          "description": "Safety margin applied (in %)"
+        },
+        "reliability": {
+          "name": "Reliability",
+          "description": "Reliability of the calibration (in %)."
+        },
+        "k_ext": {
+          "name": "K_ext",
+          "description": "Estimated external heat loss coefficient (slope)."
+        },
+        "min_power_threshold": {
+          "name": "Min Power Threshold",
+          "description": "Power threshold used to filter cycles."
+        },
+        "period": {
+          "name": "Period",
+          "description": "History period analyzed (in days)."
         }
       }
     },
